--- a/hackerrank_sort_all/hackerrank_sort_all.csproj
+++ b/hackerrank_sort_all/hackerrank_sort_all.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>hackerrank_sort_all.TheFullCountingSort</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,8 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CountingSort1.cs" />
+    <Compile Include="CountingSort2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quicksort1Partition.cs" />
+    <Compile Include="TheFullCountingSort.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
